Mon Sep  8 10:55:23 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: Release 2.4.0

2003-08-31  Jeff Waugh  <jdub@perkypants.org>

	* capplets/display/display-capplet.png: Not an apple.

2003-08-20  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS
	
2003-08-18  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "hi" to ALL_LINGUAS.

2003-08-13  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-network-preferences.glade: Allow ports up to 65535 to be
	specified in the proxy dialog box. Fixes bug #108930.

Tue Aug  5 17:51:13 2003  Jonathan Blandford  <jrb@redhat.com>

	* capplets/display/main.c: Patch from James T. Richardson, Jr
	<james@richardsons.us> to clean up the R and R capplet a little,
	#115629

Thu Jul 31 14:43:16 2003  Jonathan Blandford  <jrb@redhat.com>

	* typing-break/drw-monitor.c: remove unneeded #include <sys/vt.h>
	as it doesn't exist on Solaris.

2003-07-29  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* capplets/sound/sound.desktop.in:
	Use gnome-audio.png, not gnome-audio2.png for icon.

2003-07-29  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* capplets/accessibility/at-properties/.cvsignore:
	* vfs-methods/themus/.cvsignore:
	Quiet CVS.

	* vfs-methods/themus/Makefile.am:
	Add missing files to EXTRA_DIST. Fix distcheck.

	* gnome-settings-daemon/Makefile.am:
	Really don't ship generated files in tarball.

2003-07-24  Andrew Sobala  <aes@gnome.org>

	* Added libglade to themus configure check

2003-07-17  Richard Hult  <richard@imendio.com>

	* typing-break/main.c (main): Remove session stuff since g-s-d
	handles lifetime the cycle now.

2003-07-11  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-07-07  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-02  Jody Goldberg <jody@gnome.org>
